gitops/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daddy-app
  labels:
    app: daddy-app
    app.kubernetes.io/part-of: daddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: daddy-app
  template:
    metadata:
      labels:
        app: daddy-app
    spec:
      containers:
        - name: daddy-app
          image: quay.io/rh_ee_rmalka/daddy-app:32618d36
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
