gitops/base/gigs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gigs-service
  labels:
    app: gigs-service
    app.kubernetes.io/part-of: daddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gigs-service
  template:
    metadata:
      labels:
        app: gigs-service
    spec:
      containers:
        - name: gigs-service
          image: quay.io/rh_ee_rmalka/daddy-gigs-service:3a899b6c
          ports:
            - containerPort: 4002
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /health
              port: 4002
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 4002
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: gigs-service
spec:
  selector:
    app: gigs-service
  ports:
    - port: 4002
      targetPort: 4002
