gitops/base/requests-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: requests-service
  labels:
    app: requests-service
    app.kubernetes.io/part-of: daddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: requests-service
  template:
    metadata:
      labels:
        app: requests-service
    spec:
      containers:
        - name: requests-service
          image: quay.io/rh_ee_rmalka/daddy-requests-service:4145a125
          ports:
            - containerPort: 4004
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /health
              port: 4004
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 4004
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: requests-service
spec:
  selector:
    app: requests-service
  ports:
    - port: 4004
      targetPort: 4004
