gitops/base/app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: daddy-app
  labels:
    app: daddy-app
spec:
  to:
    kind: Service
    name: daddy-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
