gitops/base/umami-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: umami
spec:
  host: analytics.aballeh.com
  to:
    kind: Service
    name: umami
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    externalCertificate:
      name: aballeh-tls
